--- a/index.html
+++ b/index.html
@@ -1,7 +1,110 @@
+<!-- THIS CODE IS UNDER FULL COPYRIGHT AND UN-DISTRIBUTING LICENSE OF 
+A 100 WEB SOLUTIONS (http://www.a100websolutions.in). CODE MAY BE USED OR DISTRIBUTED 
+UNDER SIMILAR AND UNCHANGED LICENSE AND FULL COPYRIGHT TO A 100 WEB SOLUTIONS
+AND WITHOUT ANY CHANGES IN THE CORE CODING TECHNIQUES AND CONCEPT.
+-->
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>Counting number of characters when user starts typing</title>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+        <!--<script src="charactercount.js"></script>-->
+        <script src="charactercount.min.js"></script>
+        <link rel="shortcut icon" href="../favicon.ico" />
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <div id="fb-root"></div>
+
+<script>(function(d, s, id) {
+
+  var js, fjs = d.getElementsByTagName(s)[0];
+
+  if (d.getElementById(id)) return;
+
+  js = d.createElement(s); js.id = id;
+
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+
+  fjs.parentNode.insertBefore(js, fjs);
+
+}(document, 'script', 'facebook-jssdk'));</script>
+    
+<div id="wrapper">
+            <div id="wrapper_heading2">Starts counting number of characters upon user input</div>
+            <div id="main">
+                <textarea cols="70" rows="10" class="textinput"></textarea>
+            </div>
+            <div id="output">
+                <ul class="outputbox">
+                    <li><span>0</span><br />characters</li>
+                    <li><span>0</span><br />spaces</li>
+                    <li><span>0</span><br />numbers</li>
+                    <li><span>0</span><br />alphabets</li>
+                </ul>
+            </div>
+            <label>Try writing more than 50 characters and see the color changes to red.
+                <br />This shows that you have exceeded maximum character count</label>
+        </div>
+
+<div id="share">
+        <ul>
+                                <li>
+                                    <div class="fb-like" data-href="http://www.projects.a100websolutions.in/forgot-password-suggest-profiles-based-on-user-email-id/" data-send="false" data-layout="box_count" data-width="450" data-show-faces="false"></div>
+                                </li>
+                                <li>
+                                    <div class="g-plus" data-action="share" data-annotation="vertical-bubble" data-height="60" data-href="http://www.projects.a100websolutions.in/forgot-password-suggest-profiles-based-on-user-email-id/"></div>
+                                </li>
+                                <li>
+                                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.projects.a100websolutions.in/forgot-password-suggest-profiles-based-on-user-email-id/" data-count="vertical" data-via="a100websolution" data-hashtags="coding-tutorials"></a>
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                                </li>				
+				<li>                                  
+                                    <a href="//pinterest.com/pin/create/button/?url=http%3A%2F%2Fwww.projects.a100websolutions.in%2Fforgot-password-suggest-profiles-based-on-user-email-id%2F&media=http%3A%2F%2Fwww.projects.a100websolutions.in%2Flogo.jpg&description=Next%20stop%3A%20Pinterest" data-pin-do="buttonPin" data-pin-config="above">
+                                            <img src="//assets.pinterest.com/images/pidgets/pin_it_button.png" /></a>
+				</li>				
+                            </ul> 
+    </div>
+<div id="profile">
+    <div class="info">
+        <h1>CharacterCount.js </h1>
+    </div>
+    <div class="links"> 
+        <a href="#" id="getzip"></a>
+        <a href="#" id="ongithub"></a>
+    </div>
+    <div class="info">
+        <h2>Author </h2>
+    </div>
+    <div class="photos"> 
+    <img src="http://projects.a100websolutions.in/logo.jpg" width="100" height="100"/>
+    <img src="http://projects.a100websolutions.in/kaustav.jpg" width="100" height="100"/>
+    </div>
+    <div class="about">
+        <a href="https://github.com/kaustav020189/">Kaustav Banerjee</a>
+        <br />
+        Author at <a href="http://www.a100websolutions.in">A 100 Web Solutions</a>
+    </div>
+    
+</div>
+    </body>
+    <script type="text/javascript">
+
+  (function() {
+
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+
+    po.src = 'https://apis.google.com/js/plusone.js';
+
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+
+  })();
+
+</script>
+
+<!-- Next line for Pinterest -->
+<script type="text/javascript" src="//assets.pinterest.com/js/pinit.js"></script>
+<link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 </html>
