--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ AND WITHOUT ANY CHANGES IN THE CORE CODING TECHNIQUES AND CONCEPT.
         <h1>CharacterCount.js </h1>
     </div>
     <div class="links"> 
-        <a href="#" id="getzip"></a>
-        <a href="#" id="ongithub"></a>
+        <a href="projects.a100websolutions.in/character-count-using-simple-jquery/character-count-using-simple-jquery.zip" id="getzip"></a>
+        <a href="https://github.com/kaustav020189/character-count-using-simple-jquery" id="ongithub"></a>
     </div>
     <div class="info">
         <h2>Author </h2>
