--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ AND WITHOUT ANY CHANGES IN THE CORE CODING TECHNIQUES AND CONCEPT.
         <title>Counting number of characters when user starts typing</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <!--<script src="charactercount.js"></script>-->
-        <script src="charactercount.min.js"></script>
+        <script src="charactercount.js"></script>
         <link rel="shortcut icon" href="../favicon.ico" />
         <link rel="stylesheet" href="style.css" />
     </head>
