--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ AND WITHOUT ANY CHANGES IN THE CORE CODING TECHNIQUES AND CONCEPT.
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <!--<script src="charactercount.js"></script>-->
         <script src="charactercount.js"></script>
-        <link rel="shortcut icon" href="../favicon.ico"/>
+        <link rel="shortcut icon" href="http://projects.a100websolutions.in/favicon.ico"/>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
@@ -72,7 +72,7 @@ AND WITHOUT ANY CHANGES IN THE CORE CODING TECHNIQUES AND CONCEPT.
         <h1>CharacterCount.js </h1>
     </div>
     <div class="links"> 
-        <a href="projects.a100websolutions.in/character-count-using-simple-jquery/character-count-using-simple-jquery.zip" id="getzip"></a>
+        <a href="http://projects.a100websolutions.in/character-count-using-simple-jquery/character-count-using-simple-jquery.zip" id="getzip"></a>
         <a href="https://github.com/kaustav020189/character-count-using-simple-jquery" id="ongithub"></a>
     </div>
     <div class="info">
